# minitools

./: .env.docker.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  settings.yaml.example
.claude/skills/acceptance-test/: SKILL.md
.claude/skills/brainstorm/: SKILL.md
.claude/skills/feature-flow/: SKILL.md
.claude/skills/feature-flow-workspace/iteration-1/: benchmark.json  benchmark.md
.claude/skills/feature-flow-workspace/iteration-1/eval-existing-steering-auto/: eval_metadata.json
.claude/skills/feature-flow-workspace/iteration-1/eval-from-idea-interactive-maxiter/: eval_metadata.json
.claude/skills/feature-flow-workspace/iteration-2/: benchmark.json  benchmark.md
.claude/skills/feature-flow/evals/: evals.json
.claude/skills/gen-all-docs/: SKILL.md
.claude/skills/implement-feature/: SKILL.md
.claude/skills/initial-setup/: SKILL.md  reference.md
.claude/skills/plan-feature/: SKILL.md
.claude/skills/review-docs/: SKILL.md  reference.md
.claude/skills/steering/templates/: tasklist.md
.claude/skills/tech-researcher/: SKILL.md
.claude/skills/update-docs/: SKILL.md  reference.md
.claude/skills/validate-code/: SKILL.md  reference.md
.claude/skills/validation/: SKILL.md  reference.md
.githooks/: pre-commit
docs/core/: CHANGELOG.md  api-reference.md  architecture.md  dev-guidelines.md  diagrams.md  repo-structure.md
docs/manual-tests/: arxiv-translate-vlm-repair.md
minitools/collectors/: google_alerts.py  medium.py  youtube.py  youtube_email.py
minitools/llm/: __init__.py  base.py  langchain_gemini.py  langchain_ollama.py  langchain_openai.py  ollama_client.py  openai_client.py
minitools/processors/: __init__.py  arxiv_weekly.py  full_text_translator.py  summarizer.py  translator.py  vlm_parse_repairer.py  weekly_digest.py  youtube_summary.py
minitools/publishers/: notion.py  notion_block_builder.py  slack.py
minitools/researchers/: __init__.py  hf_papers.py
minitools/scrapers/: __init__.py  article_dates.py  arxiv_scraper.py  jina_reader.py  medium_scraper.py
minitools/utils/: processed_store.py
scripts/: arxiv.py  arxiv_translate.py  arxiv_weekly.py  discover_notion_medium.py  google_alert_daily_digest.py  google_alerts_translate.py  medium.py  medium_translate.py  scrape_medium.py  youtube_mail_digest.py
scripts/launchd/: com.tak.minitools.google-alert-daily-digest.plist  com.tak.minitools.youtube-mail-digest.plist
tests/: conftest.py  test_article_dates.py  test_arxiv_scraper.py  test_arxiv_weekly.py  test_full_text_translator.py  test_google_alerts_translate.py  test_hf_papers.py  test_langchain_gemini.py  test_medium_collector.py  test_medium_scraper.py  test_medium_translate.py  test_notion_block_builder.py  test_notion_upload_file.py  test_slack_arxiv_format.py  test_slack_publisher.py  test_vlm_parse_repairer.py  test_weekly_digest.py  test_youtube_email.py
(+36 files in other folders)
