[project]
name = "minitools"
version = "0.1.0"
description = "A collection of automation tools for content aggregation and processing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "bs4>=0.0.2",
    "feedparser>=6.0.11",
    "google-api-python-client>=2.176.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "notion-client<2.5.0",
    "ollama>=0.5.1",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0",
    "requests>=2.32.4",
    "pytz>=2024.1",
    "yt-dlp>=2024.1.0",
    "brotli>=1.1.0",
    "cloudscraper>=1.2.71",
    "playwright>=1.57.0",
    "ruff>=0.14.10",
    # LangChain for unified LLM interface
    "langchain>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langchain-openai>=0.3.0",
    "tavily-python>=0.3.0",
    "langchain-google-genai>=4.2.0",
    "marker-pdf>=1.10.0",
    "opencv-python-headless>=4.11.0.86",
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
whisper = [
    "scipy==1.14.1",
    "mlx-whisper>=0.1.0",
]
openai = [
    "openai>=1.0.0",
]

[project.scripts]
arxiv = "scripts.arxiv:main"
medium = "scripts.medium:main"
google-alerts = "scripts.google_alerts:main"
google-alerts-translate = "scripts.google_alerts_translate:main"
youtube = "scripts.youtube:main"
google-alert-weekly-digest = "scripts.google_alert_weekly_digest:main"
arxiv-weekly = "scripts.arxiv_weekly:main"
medium-translate = "scripts.medium_translate:main"
arxiv-translate = "scripts.arxiv_translate:main"
x-trend = "scripts.x_trend:main"
x-followings = "scripts.x_followings:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["minitools", "scripts"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "types-pyyaml>=6.0",
    "types-requests>=2.31",
    "types-pytz>=2024.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
# サードパーティ未修正の DeprecationWarning のみ抑止する。
# 抑止理由（upstream トラッキング）:
#   - marker-pdf / surya-ocr: Pydantic V1 形式 `class Config` 残存。
#     最新版（marker-pdf 1.10.2 / surya-ocr 0.17.1）でも未対応。
#     対応するには upstream に PR を出して `model_config = ConfigDict(...)` へ移行させる必要がある。
#   - PyMuPDF (SWIG): macOS では SWIG 4.3.1 でビルドされる制約により警告が残る。
#     SWIG 側のバグ https://github.com/swig/swig/issues/3279 解消待ち。
#     Linux/Windows では PyMuPDF 1.27.x で解消済み（参考 PyMuPDF#3931）。
# 修正されたら該当行を順次削除すること。
filterwarnings = [
    "ignore::pydantic.PydanticDeprecatedSince20:marker.settings",
    "ignore::pydantic.PydanticDeprecatedSince20:surya.settings",
    "ignore:builtin type Swig.* has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.mypy]
ignore_missing_imports = true
